--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 	</style>
 
-	<script src="src/jquery.min.js" type="text/javascript"></script>
-	<script src="src/coffee-script.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/ace.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/mode-coffee.js" type="text/javascript" charset="utf-8"></script>
-	<script src="src/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
+	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
+	<script src="http://jashkenas.github.com/coffee-script/extras/coffee-script.js" type="text/javascript" charset="utf-8"></script>
+	<script src="ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
+	<!-- <script src="ace/build/src/theme-twilight.js" type="text/javascript" charset="utf-8"></script> -->
+	<script src="ace/build/src/mode-coffee.js" type="text/javascript" charset="utf-8"></script>
+	<script src="ace/build/src/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body>
