--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
 	</style>
 
-	<script src="http://code.jquery.com/jquery.min.js" type="text/javascript"></script>
-	<script src="http://jashkenas.github.com/coffee-script/extras/coffee-script.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/jquery-1.6.2.min.js" type="text/javascript"></script>
+	<script src="lib/coffee-script.js" type="text/javascript" charset="utf-8"></script>
 	<script src="ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
 	<!-- <script src="ace/build/src/theme-twilight.js" type="text/javascript" charset="utf-8"></script> -->
 	<script src="ace/build/src/mode-coffee.js" type="text/javascript" charset="utf-8"></script>
