added a bunch of keyboard shortcuts such as meta+/ for block commenting and # to auto insert #{}, etc

--- a/index.html
+++ b/index.html
@@ -53,16 +53,11 @@
 			overflow:hide;
 			width:400px;
 			border: 2px solid black;
+			background:white;
 		}
 
 	</style>
 
-	<script src="lib/jquery-1.6.2.min.js" type="text/javascript"></script>
-	<script src="lib/coffee-script.js" type="text/javascript" charset="utf-8"></script>
-	<script src="ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
-	<!-- <script src="ace/build/src/theme-twilight.js" type="text/javascript" charset="utf-8"></script> -->
-	<script src="ace/build/src/mode-coffee.js" type="text/javascript" charset="utf-8"></script>
-	<script src="ace/build/src/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 <body>
@@ -70,6 +65,13 @@
 	<div id="input"></div>
 	<div id="output"></div>
 	<div id="debug"></div>
+
+	<script src="lib/jquery-1.6.2.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="lib/coffee-script.js" type="text/javascript" charset="utf-8"></script>
+	<script src="ace/build/src/ace.js" type="text/javascript" charset="utf-8"></script>
+	<!-- <script src="ace/build/src/theme-twilight.js" type="text/javascript" charset="utf-8"></script> -->
+	<script src="ace/build/src/mode-coffee.js" type="text/javascript" charset="utf-8"></script>
+	<script src="ace/build/src/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
 
 	<script src="editor.coffee" type="text/coffeescript" carset="utf-8"></script>
 
